# StartSetup_FastAPI_docker

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: .gitmessage.txt
.github/workflows/: ci.yml  docker.yml  lint.yml
