[tool.poetry]
name = "ai-butler"
version = "0.1.0"
description = "AI Butler"
authors = ["iwill <iwill@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.main.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.3"
isort = "^5.13.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]  # 활성화할 룰 (flake8 호환 룰 등)
exclude = ["tests/*", "docs/*"]   # 제외할 경로

# 필요시 더 세부 설정 추가 가능
